# sonor

./: .gitignore  Cargo.toml
examples/: browse.rs  controller.rs  discovery.rs  manager.rs  queue.rs  snapshot.rs  sonos.rs  speaker.rs
src/: content.rs  controller.rs  datatypes.rs  discovery.rs  lib.rs  manager.rs  metadata.rs  snapshot.rs  speaker.rs  urns.rs  utils.rs
src/manager/: controller.rs  error.rs  escape.rs  manager.rs  mediasource.rs  metadata.rs  mod.rs  subscriber.rs  test.rs  types.rs
src/manager/controller/: zoneaction.rs
