[package]
name = "sonor"
version = "1.1.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
readme = "README.md"
description = "a library for controlling sonos speakers"
repository = "https://github.com/jakobhellermann/sonor"
categories = ["network-programming", "asynchronous"]
keywords = ["sonos", "async", "audio", "upnp"]
license = "MIT"
edition = "2018"

[dependencies]
rupnp = { version = "1.0.0", features = ["subscribe"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4"
roxmltree = "0.13"
thiserror = "1.0"
http = "0.2"
tokio = { version = "1.0", features = ["sync", "time"] }
fastrand = "1.5.0"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
xml-rs = "0.8"

[patch.crates-io]
rupnp = { path = "../rupnp" }
