[package]
name = "sonor"
version = "1.1.0"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>", "Ryan Olf <ryan@efrus.com>"]
readme = "README.md"
description = "a library for controlling sonos speakers"
repository = "https://github.com/jakobhellermann/sonor"
categories = ["network-programming", "asynchronous"]
keywords = ["sonos", "async", "audio", "upnp"]
license = "MIT"
edition = "2018"

[dependencies]
rupnp = { version = "1.0.0", features = ["subscribe"] }
futures-util = { version = "0.3", default-features = false, features = ["alloc"] }
log = "0.4"
roxmltree = "0.13"
thiserror = "1.0"
http = "0.2"
tokio = { version = "1.0", features = ["sync", "time", "macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
fastrand = "1.5.0"
urlencoding = "2.1.0"
async-trait = "0.1.51"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
simple_logger = "1.13.0"

[patch.crates-io]
rupnp = { path = "../rupnp" }
