[package]
name = "sonor"
version = "3.0.0-5"
authors = ["Jakob Hellermann <jakob.hellermann@protonmail.com>"]
readme = "README.md"
description = "a library for controlling sonos speakers"
repository = "https://github.com/jakobhellermann/sonor"
categories = ["network-programming", "asynchronous"]
keywords = ["sonos", "async", "audio", "upnp"]
license = "MIT"
edition = "2018"

[dependencies]
rupnp = {version = "2.1.1", git="https://github.com/ryanolf/rupnp", branch="extra-device-elements"}
futures-util = { version = "0.3", default-features = false, features = [
  "alloc",
] }
log = "0.4"
roxmltree = "0.18"
thiserror = "1.0"
http = "0.2"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "time"] }
futures = "0.3"
